syntax = "proto3";

package calculator;

option go_package="calculatorpb";

message SumRequest {
    int32 num1 = 1;
    int32 num2 = 2;
}

message SumResponse {
    int32 result = 1;
}

message PNDRequest {
    int32 number = 1;
}

message PNDResponse {
    int32 result = 1;
}

message AverageRequest {
    float num = 1;
}

message AverageResponse {
    float result = 1;
}

message FindMaxRequest {
    int32 num = 1;
}

message FindMaxResponse {
    int32 max = 1;
}

message SquareRequest {
    int32 num = 1;
}

message SquareResponse {
    double squareRoot = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {}
    rpc SumWithDeadline(SumRequest) returns (SumResponse) {}
    rpc PrimeNumberDecomposition(PNDRequest) returns (stream PNDResponse) {}
    rpc Average(stream AverageRequest) returns (AverageResponse) {}
    rpc FindMax(stream FindMaxRequest) returns (stream FindMaxResponse) {}
    rpc Square(SquareRequest) returns (SquareResponse) {}
}